# ipcap

./: .bumpversion.cfg  .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
codegen/: countries-three.txt  countries-to-continents.txt  dma.txt
codegen/src/: code_gen.rs  countries.rs  lib.rs  names.rs
ipcap/: Cargo.toml
ipcap-cli/: Cargo.toml
ipcap-cli/src/: cli.rs  main.rs
ipcap-codegen/: Cargo.toml  countries-two.txt
ipcap-codegen/src/: lib.rs
ipcap/src/: countries_codes_two.rs  geo_ip_reader.rs  lib.rs
src/: cli.rs  codegen.rs  constants.rs  continent_names.rs  continents.rs  countries-names.txt  countries.rs  countries_codes_three.rs  countries_codes_two.rs  countries_names.rs  designated_market_area.rs  errors.rs  geo_ip_reader.rs  lib.rs  main.rs  names.rs  time_zones.rs  utils.rs
