[package]
name = "ipcap"
version = "0.1.3"
description = "🌍 A CLI & library for decoding IP addresses into state, postal code, country, coordinates, etc without internet access."
license = "MIT"
keywords = ["ip", "geolocation", "geoip", "ipcap"]
repository = "https://github.com/wiseaidev/ipcap"
documentation = "https://docs.rs/ipcap"
authors = ["Mahmoud Harmouch <oss@wiseai.dev>"]
exclude = ["/data"]

edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.12", features = ["derive"] , optional = true }
dirs = "5.0.1"
once_cell = "1.19.0"

[build-dependencies]
codegen = { path = "codegen" }

[features]
cli = ["clap"]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = "thin"
strip = "symbols"
