[package]
name = "ipcap-codegen"
version = "0.1.0"
edition = "2021"
description = "ipcap codegen crate."
license = "MIT"
keywords = ["ipcap", "ipcap-codegen", "rust"]
repository = "https://github.com/wiseaidev/ipcap"
documentation = "https://docs.rs/ipcap"
authors = ["Mahmoud Harmouch <oss@wiseai.dev>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
